# Virtual-Economist

./: AGENTS.md  README.md
backend/: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  package-lock.json  package.json  pyproject.toml
backend/app/: index.js  main.py  server.js
backend/app/agents/: base.py  router.py
backend/app/agents/housing/: agent.py  prompts.py
backend/app/agents/market/: agent.py  prompts.py
backend/app/api/: schemas.py
backend/app/api/routes/: chat.py  health.py  history.py  watchlist.js
backend/app/middleware/: auth.js  auth.py
backend/app/services/: bedrock.py  history.py  live_apis.py  stock_sync.py
backend/database/: connect.py  db.js  process_csv_to_psql.py  schema_agents.sql  setup.sql
backend/scripts/: sync_stock_data.py
backend/tests/: conftest.py  test_base_agent.py  test_housing_live_data.py  test_market_live_data.py  test_router.py  test_stock_sync.py
frontend/: .env  .eslintrc.json  Dockerfile  nginx.conf  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatInterface.tsx  Navbar.tsx  StockPriceChart.tsx  WatchlistCard.tsx
frontend/src/lib/: api.ts  auth.ts
frontend/src/pages/: About.tsx  AssistantWorkspace.tsx  Dashboard.tsx  Features.tsx  HousingAgent.tsx  LandingPage.tsx  LoginPage.tsx  MarketAgent.tsx  Profile.tsx  SignupPage.tsx  VerifyEmail.tsx  VerifyEmailPage.tsx
frontend/src/styles/: about.css  auth.css  chat.css  dashboard.css  features.css  landing.css  navbar.css  profile.css  watchlist.css
infra/: demo-runbook.md
infra/ec2/: README.md
infra/ec2/env/: auth.env.example  fastapi.env.example
infra/ec2/nginx/: virtual-economist.conf
infra/ec2/scripts/: bootstrap-amzn2023.sh  deploy.sh  smoke-test.sh
infra/ec2/systemd/: virtual-economist-auth.service  virtual-economist-fastapi.service
scripts/: lint.sh
