[project]
name = "virtual-economists-backend"
version = "0.1.0"
description = "API backend for Virtual Economists (chat agents for US cities & markets)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Virtual Economists Team" }]

# runtime deps
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic>=2",
  "sqlalchemy>=2.0",
  "asyncpg>=0.29",
  "pgvector>=0.3.2",
  "httpx>=0.24",
  "python-dotenv>=1.0",
  "loguru>=0.7",
  "numpy>=1.26",
  "pandas>=2.2",
  "tenacity>=8.2",
  "psycopg2-binary>=2.9.11",
  "boto3>=1.42.53",
  "botocore[crt]>=1.42.53",
]

[dependency-groups]
dev = [
  "ruff>=0.6",
  "mypy>=1.10",
  "pre-commit>=3.7",
]
test = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "coverage[toml]>=7.5",
  "anyio>=4.4",
  "types-requests>=2.32",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]

[project.scripts]
# handy entry if you later add a CLI (optional)
ve-dev = "backend.app.__main__:main"

# ----------------------------
# Linting / formatting (Ruff)
# ----------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
# keep checks focused on backend only
extend-exclude = ["**/migrations", "build", "dist", ".venv"]

[tool.ruff.lint]
select = ["E","F","W","I","B","C4","UP","RUF","PGH"]
ignore = ["E203"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ----------------------------
# Type checking (mypy)
# ----------------------------
[tool.mypy]
python_version = "3.11"
packages = ["backend"]           # your code lives under backend/
strict = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
no_implicit_optional = true
strict_equality = true

# ----------------------------
# Pytest / Coverage
# ----------------------------
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["backend/tests"]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["backend"]

[tool.coverage.report]
show_missing = true
precision = 1
exclude_also = [
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
]

# ----------------------------
# uv settings (optional)
# ----------------------------
[tool.uv]
# uv reads dependency groups above; nothing special needed here
